--- a/mise.toml
+++ b/mise.toml
@@ -32,3 +32,11 @@ run = "go build -o main *.go && ./main ./example008.go && rm main"
 [tasks.chapter05-exercise-run]
 dir = "{{cwd}}/chapter05/exercise"
 run = "go run *.go"
+
+[tasks.chapter06-main-run]
+dir = "{{cwd}}/chapter06"
+run = "go run main.go"
+
+[tasks.chapter06-exercise-run]
+dir = "{{cwd}}/chapter06/exercise"
+run = "go run *.go"
